第一版的登陆界面

--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,3 +1,7 @@
+// variable.scss
+
 :root {
-  --el-input-focus-border-color: #0cc609;
+  --el-color-primary: #5cb85c;
+  --el-color-primary-light-3: #82d780;
+  --el-border-radius-base: 12px;
 }
